@@ -3,6 +3,7 @@
 == 0.4.0 (not yet released)
 * NEW: Complete tagging (folksonomy) support.
 * NEW: Model::Release#cover_art_uri
+* NEW: Support release event format.
 
 == 0.3.0 (2007-08-11)
 * BUG: Relation end date was not set correctly in MBXML.
